change dark color

--- a/config.toml
+++ b/config.toml
@@ -66,7 +66,7 @@ h5 = "18px"
 h6 = "16px"
 white = "#ffffff"
 black = "#000000"
-dark = "#152035"
+dark = "#0b0b26"
 gray = "#747577"
 light = "#FAFAFA"
 color_primary = "#01AD9F"
