--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 ######################## default configuration ####################
-baseURL = "http://example.org"
+baseURL = "http://nikitv.ir"
 title = "مرجع آموزش کامپیوتر"
 theme = "bookworm-light"
 # post pagination
